sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:12: error: ')' expected but '}' found.
        }
        ^